--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,10 @@ body {
 header {
   background: #373737;
   color: #fff;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  /*@media screen and (min-width: 600px){
+  		position: fixed;
+  	}*/ }
 
 header .container {
   display: -webkit-box;
@@ -457,7 +460,7 @@ a:hover {
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  margin-left: 70px;
+  margin-left: 20px;
   margin-right: 30px;
   width: 110px; }
   .login-menu #left {
@@ -722,6 +725,15 @@ See separate stylesheet: 'easy-responsive-tabs.css'
 
 //
 
+
+/*------------------------------------ Booking Form -----------------------------*/
+#booking-form {
+  background-color: white;
+  padding: 5px; }
+
+/*------------------------------------ Appointments+ Page -----------------------------*/
+#primary {
+  color: #ddd; }
 
 /*------------------------------------ Register Form -----------------------------*/
 div#register-form {
