--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,10 @@ header{
 	background: $background-color;
 	color: #fff;
 	-webkit-font-smoothing: antialiased;
-	
+
+	/*@media screen and (min-width: 600px){
+			position: fixed;
+		}*/
 }
 
 header .container{
@@ -39,9 +42,8 @@ header .container{
 
 		@media screen and (min-width: 600px){
 			display: none;
-		} 
-		
-	}
+		} 	
+	}	
 }
 
 /* fix bootstrap and flex not working well together */
@@ -181,7 +183,6 @@ ul{
 
 		@media screen and (min-width: 600px){
 			display: block;
-
 		}
 
 		a{
@@ -234,7 +235,6 @@ a .header-logo{
 		display: flex;
 		justify-content: center;
 		
-
 		#x-logopic{
 			background-image: url("img/logo-gold.png");
 			background-size: 100% 100%;
@@ -332,7 +332,7 @@ a:hover{
 .login-menu{
 	display: flex;
 	justify-content: space-around;
-	margin-left: 70px;
+	margin-left: 20px;
 	margin-right: 30px;
 	width: 110px;
 	//background-color: $gold;
@@ -675,6 +675,23 @@ See separate stylesheet: 'easy-responsive-tabs.css'
 
 //
 
+
+/*------------------------------------ Booking Form -----------------------------*/
+
+
+//.birs_form_field.birs_appointment_location { display: none; }
+
+#booking-form{
+	background-color: white;
+	padding: 5px;
+}
+
+
+/*------------------------------------ Appointments+ Page -----------------------------*/
+
+#primary{
+	color: #ddd;
+}
 
 /*------------------------------------ Register Form -----------------------------*/
 
