--- a/css/style.scss
+++ b/css/style.scss
@@ -327,6 +327,16 @@ a:hover{
 	p{
 		color: $background-color;
 	}
+
+	#menu-logged-in-user{
+		padding-top: 20px;
+	}
+
+	a.logout{
+		
+		position: relative;
+
+	}
 }
 
 .login-menu{
@@ -353,6 +363,8 @@ a:hover{
 		display: none;
 	}
 }
+
+
 
 
 #sidemenu{
@@ -414,7 +426,7 @@ a:hover{
 
 
 body.show_topmenu{
-	padding-top: 265px;
+	padding-top: 295px;
 }
 
 body.show_topmenu #topmenu{
@@ -422,7 +434,7 @@ body.show_topmenu #topmenu{
 }
 
 body.show_usermenu .pusher{
-	transform: translate3d(0,179px,0);
+	transform: translate3d(0,171px,0);
 }
 
 body.show_sidemenu .pusher{
@@ -762,6 +774,33 @@ p.statement {
     left:10px;
     font-size:.9em;
     color: $gold;
+}
+
+
+/*--------- Version 2 -----------*/
+
+.container .register label{
+	color: white;
+}
+
+
+
+
+
+/*------------------------------------ Login Form -----------------------------*/
+
+.login-form{
+	background-color: white;
+	padding: 5px;
+	margin-top: 20px;
+}
+
+input[type="text"]{
+	padding-right: 5px;
+}
+
+label{
+	margin-right: 10px;
 }
 
 /*------------------------------------ Footer -----------------------------*/
