updated styles to services page

--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,11 @@ header .container:after {
     #icon-user:before {
       display: none; } }
 
+/*.fixed-menu{
+	position: fixed;
+	background-color: $background-color;
+
+}*/
 @media screen and (max-width: 600px) {
   .container .main-menu {
     display: none; } }
@@ -583,10 +588,8 @@ body.show_sidemenu .pusher {
     -webkit-transform: scale(0.8); }
 
 .face-pic img {
-  margin-top: 60px;
-  width: 100vw;
-  padding: 5px;
-  background-color: white; }
+  margin-top: 80px;
+  width: 100vw; }
   @media screen and (min-width: 600px) {
     .face-pic img {
       width: 100%;
@@ -806,7 +809,7 @@ p.statement {
 .container .register label {
   color: white; }
 
-/*------------------------------------ Facials -----------------------------*/
+/*------------------------------------ Page display Services -----------------------------*/
 .facial-content {
   background-color: white;
   padding: 20px; }
@@ -828,6 +831,11 @@ p.statement {
   .facial-content h3 {
     font-weight: bold;
     font-size: 1.1em; }
+
+#back-arrow {
+  color: #b2854c;
+  padding-bottom: 10px;
+  padding-left: 5px; }
 
 /*------------------------------------ Login Form -----------------------------*/
 .login-form {
